cabal-version:       2.4

name:                karaa
version:             0.1.0.0
synopsis:            A GameBoy Color emulator in Haskell
description:         See README.md <https://github.com/typedrat/karaa/blob/master/README.md>
homepage:            https://github.com/typedrat/karaa
license:             MPL-2.0
license-file:        LICENSE
author:              Alexis Williams
maintainer:          alexis@typedr.at
copyright:           © 2022 Alexis Williams
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: git://git@github.com:typedrat/karaa.git

library
  exposed-modules:     Karaa.Core.Types.BitInByte
                     , Karaa.Core.Types.Memory
                     , Karaa.Core.Types.WithMonadIO
                     , Karaa.Core.Monad
                     , Karaa.CPU.Instructions.Decode
                     , Karaa.CPU.Instructions.Mnemonic
                     , Karaa.CPU.Instructions.Operand
                     , Karaa.CPU.Instructions.Types
                     , Karaa.CPU.Interrupts
                     , Karaa.CPU.Interrupts.Internal
                     , Karaa.CPU.LoadStore
                     , Karaa.CPU.Registers
                     , Karaa.CPU.State
                     , Karaa.Hardware.Cartridge
                     , Karaa.Hardware.Cartridge.Header
                     , Karaa.Hardware.Cartridge.Header.Types
                     , Karaa.Hardware.Cartridge.Mappers
                     , Karaa.Hardware.Cartridge.Mappers.ROMOnly
                     , Karaa.Hardware.Serial
                     , Karaa.Hardware.State
                     , Karaa.Hardware.WorkRAM
                     , Karaa.Util.ByteLenses
                     , Karaa.Util.Hex

  build-depends:       base           >= 4.14      && < 5
                     , transformers   >= 0.5.6.2   && < 0.6 
                     , mtl           ^>= 2.2.2
                     , bytestring     >= 0.10.12.1 && < 0.12
                     , vector        ^>= 0.12.3.1
                     , deepseq       ^>= 1.4.4
                     , lens          ^>= 5.1
                     , prettyprinter ^>= 1.7.1
                     , megaparsec    ^>= 9.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  BinaryLiterals
                     , DataKinds
                     , DerivingVia
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , NamedFieldPuns
                     , NumericUnderscores
                     , OverloadedStrings
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeApplications
                     , UndecidableInstances
  other-extensions:    OverloadedLists
  ghc-options:         -O2 -Wall

executable karaa
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.14 && < 5
                     , lens
                     , karaa
  hs-source-dirs:      app
  default-language:    Haskell2010
