cabal-version:       2.4

name:                karaa
version:             0.1.0.0
synopsis:            A GameBoy Color emulator in Haskell
description:         See README.md <https://github.com/typedrat/karaa/blob/master/README.md>
homepage:            https://github.com/typedrat/karaa
license:             MPL-2.0
license-file:        LICENSE
author:              Alexis Williams
maintainer:          alexis@typedr.at
copyright:           © 2022 Alexis Williams
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md

common language
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , BinaryLiterals
                     , DataKinds
                     , DerivingVia
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , NamedFieldPuns
                     , NumericUnderscores
                     , OverloadedStrings
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeApplications
                     , UndecidableInstances
                     , ViewPatterns
  other-extensions:    OverloadedLists

  ghc-options:         -O2 -Wall
                       -flate-dmd-anal -fspec-constr-count=50
                       -fexpose-all-unfoldings -fspecialize-aggressively

source-repository head
  type: git
  location: git://git@github.com:typedrat/karaa.git

library
  import:              language

  exposed-modules:     Karaa.Core.Monad
                     , Karaa.CPU
                     , Karaa.CPU.Execution
                     , Karaa.CPU.Instructions.Decode
                     , Karaa.CPU.Instructions.Mnemonic
                     , Karaa.CPU.Instructions.Operand
                     , Karaa.CPU.Instructions.Types
                     , Karaa.CPU.Interrupts
                     , Karaa.CPU.Interrupts.Internal
                     , Karaa.CPU.LoadStore
                     , Karaa.CPU.Registers
                     , Karaa.CPU.State
                     , Karaa.Hardware.Cartridge
                     , Karaa.Hardware.Cartridge.Header
                     , Karaa.Hardware.Cartridge.Header.Types
                     , Karaa.Hardware.Cartridge.Mappers
                     , Karaa.Hardware.Cartridge.Mappers.MBC1
                     , Karaa.Hardware.Cartridge.Mappers.ROMOnly
                     , Karaa.Hardware.HighRAM
                     , Karaa.Hardware.Serial
                     , Karaa.Hardware.State
                     , Karaa.Hardware.Timer
                     , Karaa.Hardware.WorkRAM
                     , Karaa.Types.BitInByte
                     , Karaa.Types.Memory
                     , Karaa.Types.WithMonadIO
                     , Karaa.Util.ByteLenses
                     , Karaa.Util.Hex

  build-depends:       base           >= 4.14      && < 5
                     , transformers   >= 0.5.6.2   && < 0.6 
                     , mtl           ^>= 2.2.2
                     , exceptions    ^>= 0.10.4
                     , bytestring     >= 0.10.12.1 && < 0.12
                     , vector        ^>= 0.12.3.1
                     , deepseq       ^>= 1.4.4
                     , lens          ^>= 5.1
                     , prettyprinter ^>= 1.7.1
                     , megaparsec    ^>= 9.2.0
                     , bits-extra    ^>= 0.0.2.0
                     , dlist         ^>= 1.0
  hs-source-dirs:      src

  build-tool-depends:  markdown-unlit:markdown-unlit ^>= 0.5.1
  ghc-options:         -pgmL markdown-unlit

executable karaa
  import:              language

  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.14 && < 5
                     , transformers
                     , mtl
                     , bytestring
                     , lens
                     , karaa
                     , repline ^>= 0.4
                     , filepath ^>= 1.4.2.1
                     , directory ^>= 1.3.6.0
                     , exceptions
                     , pretty-simple ^>= 3.3.0.0
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-A4m
